--- a/liujunchen1208.github.io/contents/config.yml
+++ b/liujunchen1208.github.io/contents/config.yml
@@ -1,5 +1,5 @@
 title: 刘峻辰's Homepage
 page-top-title: 刘峻辰
-top-section-bg-text: Be what you wanna be
+top-section-bg-text: Zero in your target, and go for it
 home-subtitle: yourname&ensp;|&ensp;刘峻辰
 copyright-text: '&copy; 刘峻辰 2023-2025. All Rights Reserved.'
