--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,6 @@
-title: Yourname's Homepage
-page-top-title: Yourname
-top-section-bg-text: Be what you wanna be
-home-subtitle: Yourname&ensp;|&ensp;上杉绘梨衣
-copyright-text: '&copy; Yourname 2023-2025. All Rights Reserved.'
+title: 刘峻辰's Homepage
+page-top-title: 刘峻辰
+top-section-bg-text: Zero in your target, and go for it
+home-subtitle: yourname&ensp;|&ensp;刘峻辰
+copyright-text: '&copy; 刘峻辰 2023-2025. All Rights Reserved.'
+
